# lecode

./: .gitattributes  .gitignore  AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  ROADMAP.md  SECURITY.md  package-lock.json  package.json  tsconfig.tsbuildinfo
.github/workflows/: ci.yml
.next/: required-server-files.js  required-server-files.json
.next/server/: middleware-build-manifest.js
.next/server/app/: _not-found.html  page.js  page.js.nft.json
.next/server/app/_global-error/: page_client-reference-manifest.js
.next/server/app/_not-found/: page.js  page_client-reference-manifest.js
.next/server/app/_not-found.segments/: _head.segment.rsc
.next/server/app/_not-found/page/: build-manifest.json
.next/server/app/icon/: route.js
.next/server/app/index.segments/: _tree.segment.rsc
.next/server/chunks/: [externals]_next_dist_c3f35bcb._.js
.next/server/chunks/ssr/: [root-of-the-server]__1690ee0d._.js  [root-of-the-server]__5028c536._.js.map  _07a90ae2._.js.map  _98a2f46f._.js  _98a2f46f._.js.map  _fbcc541a._.js  node_modules_next_dist_esm_build_templates_app-page_cfb6cd1f.js  node_modules_next_dist_esm_build_templates_app-page_cfb6cd1f.js.map
.next/static/chunks/: turbopack-6060e0645cda9df6.js
SPEC/: README.md
crates/: .gitignore  Cargo.toml  LICENSE  README.md
crates/crates/lesearch-protocol/: Cargo.toml
crates/docs/: A2A_FACADE.md  SYSTEM_DESIGN.md
crates/lesearch-cli/: Cargo.toml
crates/lesearch-cli/src/: main.rs
crates/lesearch-cli/tests/: cli_help_works.rs  cli_list_returns_active_agents.rs  cli_run_test_provider_streams.rs  cli_stop_terminates_agent.rs  e2e_spawn_and_stream.rs
crates/lesearch-daemon/: Cargo.toml
crates/lesearch-daemon/src/: agent_manager.rs  lib.rs  main.rs
crates/lesearch-daemon/tests/: daemon_event_stream.rs  daemon_serves_on_port.rs  streamids_on_spawn.rs
crates/lesearch-protocol/src/: lib.rs
crates/lesearch-protocol/tests/: spawn_params_worktree.rs
crates/lesearch-providers/: Cargo.toml
crates/lesearch-providers/src/: claude.rs  lib.rs  test_provider.rs
crates/lesearch-providers/tests/: worktree_cwd.rs
crates/lesearch-storage/: Cargo.toml
crates/lesearch-storage/src/: lib.rs
demos/: lecode-quickstart.tape
docs/: EPICS_AND_STORIES.md  PRD.md  PRODUCT_SPEC.md  REVIEW_SYNTHESIS.md  STORAGE_MODEL.md  protocol-v0.1.md
docs/adrs/: 0001-apache-2.0-license.md
docs/issues/: 01-protocol-spec-v0.1.md  02-daemon-scaffold.md  03-pty-crate.md  04-storage-scaffold.md  05-a2a-scaffold.md
public/: llms.txt
src/components/: FadeIn.tsx  Footer.tsx
src/components/sections/: Architecture.tsx  Waitlist.tsx
src/lib/: supabase.ts
web/: biome.json  next.config.ts  package-lock.json  package.json  playwright.config.ts  tsconfig.tsbuildinfo
web/.next/: BUILD_ID  app-path-routes-manifest.json  build-manifest.json  fallback-build-manifest.json  prerender-manifest.json  routes-manifest.json  trace  trace-build
web/.next/cache/: .previewinfo  .rscinfo
web/.next/server/: app-paths-manifest.json  server-reference-manifest.js  server-reference-manifest.json
web/.next/server/app/: _global-error.html  _global-error.rsc  icon.body  index.html  page_client-reference-manifest.js
web/.next/server/app/_global-error/: page.js  page.js.nft.json
web/.next/server/app/_global-error.segments/: __PAGE__.segment.rsc  _head.segment.rsc  _index.segment.rsc  _tree.segment.rsc
web/.next/server/app/_not-found/: page.js.nft.json
web/.next/server/app/_not-found.segments/: _full.segment.rsc  _tree.segment.rsc
web/.next/server/app/_not-found.segments/_not-found/: __PAGE__.segment.rsc
web/.next/server/app/icon/: route.js.nft.json
web/.next/server/app/index.segments/: __PAGE__.segment.rsc  _full.segment.rsc  _head.segment.rsc  _index.segment.rsc
web/.next/server/chunks/: [root-of-the-server]__cc80f065._.js  [root-of-the-server]__cc80f065._.js.map
web/.next/server/chunks/ssr/: [root-of-the-server]__3b5fd80a._.js  [root-of-the-server]__3b5fd80a._.js.map  [root-of-the-server]__5028c536._.js  [root-of-the-server]__67d85b67._.js  [root-of-the-server]__67d85b67._.js.map  [root-of-the-server]__84762c98._.js  [root-of-the-server]__8ff88921._.js  [root-of-the-server]__a31f361d._.js  [root-of-the-server]__cdd21ede._.js  [root-of-the-server]__df06e43b._.js  _07a90ae2._.js  _fbcc541a._.js.map  _fc24f902._.js  _fc24f902._.js.map  node_modules_next_dist_65e60196._.js  node_modules_next_dist_65e60196._.js.map  src_9bc9fc94._.js  src_9bc9fc94._.js.map
web/.next/static/chunks/: 35e748a64578224a.css  74b34da47f3e33e3.js
web/public/: llms-full.txt  robots.txt  sitemap.xml
web/src/app/: globals.css  icon.tsx  layout.tsx  page.tsx
web/src/components/: FadeIn.tsx  Footer.tsx  Header.tsx
web/src/components/sections/: Architecture.tsx  Comparison.tsx  Hero.tsx  HowItWorks.tsx  LeCoder.tsx  Pricing.tsx  Problem.tsx  Waitlist.tsx
web/src/lib/: supabase.ts
web/tests/: hero-mobile.spec.ts  pricing.spec.ts
