[workspace]
resolver = "2"
members = [
    "crates/lesearch-protocol",
    "crates/lesearch-daemon",
    "crates/lesearch-cli",
    "crates/lesearch-storage",
    "crates/lesearch-providers",
]

[workspace.package]
version = "0.0.1"
edition = "2024"
rust-version = "1.85"
license = "Apache-2.0"
authors = ["Arya Teja Rudraraju <aryayt55@gmail.com>"]
repository = "https://github.com/aryateja2106/lecode"
homepage = "https://lesearch.ai"
readme = "README.md"
keywords = ["agent", "cli", "llm", "orchestrator", "self-hosted"]
categories = ["command-line-utilities", "development-tools"]

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

axum = { version = "0.8", features = ["ws", "macros"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["trace", "cors"] }
tungstenite = "0.24"

serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"

thiserror = "2"
anyhow = "1"

tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

ed25519-dalek = { version = "2", features = ["rand_core"] }
sha2 = "0.10"
rand = "0.8"

rusqlite = { version = "0.32", features = ["bundled"] }

uuid = { version = "1", features = ["v7", "serde"] }
time = { version = "0.3", features = ["serde", "formatting"] }

tokio-test = "0.4"
tempfile = "3"

[profile.release]
opt-level = 3
lto = "thin"
codegen-units = 1
strip = "symbols"

[profile.dev]
opt-level = 0
debug = true

[workspace.lints.rust]
unsafe_code = "forbid"
missing_docs = "warn"

[workspace.lints.clippy]
pedantic = { level = "warn", priority = -1 }
nursery = { level = "warn", priority = -1 }
cargo = { level = "warn", priority = -1 }
module_name_repetitions = "allow"
missing_errors_doc = "allow"
missing_panics_doc = "allow"
multiple_crate_versions = "allow"
