[package]
name = "lesearch-cli"
description = "LeSearch command-line client"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "lesearch-cli"
path = "src/main.rs"

[dependencies]
lesearch-protocol = { path = "../lesearch-protocol" }
tokio.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap = { version = "4", features = ["derive", "env"] }
tokio-tungstenite = "0.29"

[dev-dependencies]
lesearch-daemon = { path = "../lesearch-daemon" }
lesearch-providers = { path = "../lesearch-providers" }

[lints]
workspace = true
