[package]
name = "lesearch-daemon"
description = "LeSearch daemon: agent manager, protocol router, PTY pool, A2A gateway"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[[bin]]
name = "lesearch-daemon"
path = "src/main.rs"

[dependencies]
lesearch-protocol = { path = "../lesearch-protocol" }
lesearch-storage = { path = "../lesearch-storage" }
lesearch-providers = { path = "../lesearch-providers" }
tokio.workspace = true
axum.workspace = true
tower.workspace = true
tower-http.workspace = true
futures.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
uuid.workspace = true

[dev-dependencies]
lesearch-providers = { path = "../lesearch-providers" }
futures.workspace = true
tokio-tungstenite = "0.29"

[lints]
workspace = true
