[package]
name = "lesearch-storage"
description = "LeSearch storage layer: AgentFS namespaces, CloudEvents session log, FTS5 mirror"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
rusqlite.workspace = true
ed25519-dalek.workspace = true
sha2.workspace = true
rand.workspace = true
uuid.workspace = true
time.workspace = true
tracing.workspace = true

[lints]
workspace = true
