[package]
name = "lesearch-protocol"
description = "LeSearch wire protocol types (JSON-RPC 2.0 over WebSocket)"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
authors.workspace = true
repository.workspace = true
readme.workspace = true
keywords.workspace = true
categories.workspace = true

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
uuid.workspace = true
time.workspace = true

[lints]
workspace = true
